<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Preview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/preview_image"
            android:layout_weight="1"
        />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="22sp"
                    android:textAllCaps="true"
                    android:id="@+id/preview_heading"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/preview_description"
                    android:layout_marginTop="10dp"
                    android:textColor="#C1BEBE"
                    />

                <!--<RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Venue"
                        android:layout_above="@+id/textd1"
                        android:id="@+id/textv1"
                        android:layout_margin="20dp"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_margin="20dp"
                        android:id="@+id/textd1"
                        android:layout_alignParentBottom="true"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dsjfjfksdnfnsdkjfnskdjn"
                        android:layout_margin="20dp"
                        android:id="@+id/preview_venue"
                        android:layout_alignRight="@+id/textv1"
                        android:layout_alignEnd="@+id/textv1"
                        android:layout_above="@+id/textd1"
                        android:layout_alignParentBottom="true"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_margin="20dp"
                        android:id="@+id/preview_date"

                        android:layout_alignParentBottom="true"
                        android:textSize="20sp"
                        />

                </RelativeLayout>!-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textv1"
                        android:layout_weight="1"
                        android:text="@string/Venue"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_venue"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textd2"
                        android:layout_weight="1"
                        android:text="@string/department"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_department"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textd1"
                        android:layout_weight="1"
                        android:text="@string/date"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_date"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textc1"
                        android:layout_weight="1"
                        android:text="@string/college"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/preview_college"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        />


                </LinearLayout>



            </LinearLayout>

        </ScrollView>




    </LinearLayout>

</LinearLayout>